[project]
name = "pyls"
version = "0.6.0"
description = "A Python implementation of the ls command"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
pyls = "pyls.__main__:main"

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["pyls"]